Updated GitVersionTask to GitVersion.MsBuild.

--- a/src/TestBarcode/TestBarcode.csproj
+++ b/src/TestBarcode/TestBarcode.csproj
@@ -11,9 +11,9 @@
 
   <ItemGroup>
     <PackageReference Include="Emgu.CV" Version="4.4.0.4099" />
-    <PackageReference Include="GitVersionTask" Version="5.5.1">
+    <PackageReference Include="GitVersion.MsBuild" Version="5.6.3">
       <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="ZXing.Net" Version="0.16.6" />
   </ItemGroup>
